GoldenGate/Resources/PhotoGallery.css
.albumGroup
{
    clear: both;
}

.albumContainer a:link
{
    text-decoration: none;
    color: inherit;
}

.albumContainer a:visited
{
    text-decoration: none;
    color: inherit;
}

.albumContainer a:hover
{
    text-decoration: none;
    color: inherit;
}


.albumContainer a img
{
    border: 0;
}

.albumContainer
{
    float: left;
    height: 205px;
    width: 180px;
    margin: 10px 5px 10px 5px;
    border: 1px #CCCCCC;
    border-style: solid;
    overflow: hidden;
}

.albumImg
{
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
    height: 160px;
    width: 160px;
}

.albumImg img
{
    display: block;
    margin-top: auto;
    margin-left: auto;
    margin-right: auto;
    max-height: 160px;
    max-width: 160px;
}

.albumHeader
{
    font-weight: bold;
    margin-bottom: 5px;
    margin-top: 5px;
    cursor: default;
}

.albumHeader > .albumNav
{
    font-weight: normal;
    margin-left: 5px;
    cursor: pointer;
}

.albumNav.selected
{
    text-decoration: underline;
    cursor: default;
}

.albumContentToggle
{
    clear: both;
    font-weight: bold;
    text-decoration: underline;
    cursor: pointer;
}

.albumTitle
{
    text-decoration: underline;
    margin-top: 5px;
    margin-left: 10px;
}

.albumItems
{
    margin-top: 2px;
    margin-bottom: 5px;
    margin-left: 10px;
}

.albumHeader.recent
{
    clear: both;
    margin-top: 5px;
    padding-top: 10px;
    width: 100%;
    border-top: thin;
    border-top-style: solid;
}

.albumItem
{
    float: left;
    height: 160px;
    width: 160px;
    margin: 10px;
}

.albumItem img
{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.albumDetailHeader
{
    height: 50px;
}

.albumDetailHeader ul
{
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.albumDetailHeader li
{
    float: left;
    margin-right: 2px;
}

.albumDetailHeader li:after
{
    content: ' |';
}

.albumDetailHeader ul li:last-child:after
{
    content: '';
}

.albumDetailHeader + .albumItem
{
    clear: both;
}

.galleryPager
{
    clear: both;
}

.galleryPager ul
{
    margin: 0;
    padding: 0;
    list-style-type: none;
    float: right;
}

.galleryPager li
{
    float: left;
    margin-right: 5px;
    font-size: small;
    cursor: pointer;
}

.galleryPager li:hover
{
    text-decoration: underline;
}

.galleryPager li.selected
{
    font-weight: bold;
    text-decoration: underline;
    cursor: default;
}

.s4-wpTopTable
{
    background-image: url("/ourfirm/offices/sanfran/Style Library/Images/nav_bg.png") !important;
    background-attachment: scroll !important;
    background-repeat: repeat !important;
    background-position-x: 0% !important;
    background-position-y: 0% !important;
    background-color: transparent !important;
}

.albumButton
{
    padding: 5px 5px 5px 5px;
    border: 1px #cccccc solid;
    float: right;
    font-weight: normal;
    margin: 2px 2px;
}

